2003-03-28  John Levon  <levon@movementarian.org>

	* ui/QCharacterDialogBase.ui: re-org, fix bug 999

2003-03-28  John Levon  <levon@movementarian.org>

	* QParagraph.C:
	* QParagraphDialog.C:
	* ui/QParagraphDialog.ui: don't use negative checkbox
	strings. Add whats this for label width. Add tooltips
	(bug 997). Never show "Senseless with this layout!"

	* lengthcombo.C: remove pointless whatsthis

2003-03-28  John Levon  <levon@movementarian.org>

	* panelstack.C: compile fixes for Qt 2.3

2003-03-28  John Levon  <levon@movementarian.org>

	* QFloat.C:
	* QFloatDialog.h:
	* QFloatDialog.C:
	* ui/QFloatDialog.ui:
	* Makefile.dialogs:
	* moc/Makefile.am:
	* floatplacement.h:
	* floatplacement.C: move the float code into its
	  own widget

	* QDocument.C:
	* QDocumentDialog.h:
	* QDocumentDialog.C: use that widget

	* Makefile.dialogs:
	* QDocument.C:
	* QDocumentDialog.h:
	* QDocumentDialog.C:
	* ui/QDocumentDialogBase.ui:
	* ui/ClassModuleBase.ui:
	* ui/PaperModuleBase.ui:
	* ui/PackagesModuleBase.ui:
	* ui/MathsModuleBase.ui:
	* ui/LatexModuleBase.ui:
	* ui/PageLayoutModuleBase.ui:
	* ui/TextLayoutModuleBase.ui: big re-organisation
	of the doc dialog panes

2003-03-28  John Levon  <levon@movementarian.org>

	* panelstack.C: make sure the first panel is visible

	* QDocument.h:
	* QDocument.C: add (unused) showPreamble

	* QDocumentDialog.h:
	* QDocumentDialog.C:
	* ui/QDocumentDialog.ui: use PanelStack

2003-03-28  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* Makefile.dialogs:
	* moc/Makefile.am:
	* panelstack.h:
	* panelstack.C: add new class for handling paned dialogs

	* QPrefsDialog.h:
	* QPrefsDialog.C:
	* ui/QPrefsDialogBase.ui: use the above

	* ui/QPrefUIModule.ui: re-layout

2003-03-27  John Levon  <levon@movementarian.org>

	* ui/QParagraphDialogBase.ui: fix dupe accelerator / group label

2003-03-27  John Levon  <levon@movementarian.org>

	* QLyXKeySym.C: remove debug stuff from startup hot path
