@@ -1,5 +1,10 @@
 2003-03-28  John Levon  <levon@movementarian.org>
 
+	* QPrefs.C:
+	* ui/QPrefSpellcheckerModule.ui: fix bug 978
+
+2003-03-28  John Levon  <levon@movementarian.org>
+
 	* ui/QCharacterDialogBase.ui: re-org, fix bug 999
 
 2003-03-28  John Levon  <levon@movementarian.org>
